--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "node index.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,9 @@
   "author": "Sidiq Hersi",
   "license": "MIT",
   "dependencies": {
-    "inquirer": "^9.2.12",
+    "inquirer": "^6.3.1"
+  },
+  "devDependencies": {
     "jest": "^29.7.0"
   }
 }
